crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@int__double_digit.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/int/double_digit.panda
---
Ok(
    Int(
        Int {
            n: 10,
        },
    ),
)
