crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@int__negative.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/int/negative.panda
---
Ok(
    Int(
        Int {
            n: -37,
        },
    ),
)
